--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,9 +1,3 @@
-trigger:
-- main  # Adjust this branch as needed
-
-pr:
-- main
-
 jobs:
 - job: Build
   displayName: 'Build and Push to ACR'
@@ -16,7 +10,7 @@ jobs:
       versionSpec: '3.x'
   - script: |
       # Log in to Azure Container Registry with --password-stdin
-      echo "$(acrPassword)" | docker login udodevprojectacr.azurecr.io -u "$(acrUsername)" --password-stdin
+      echo "$(acrPassword)" | base64 --decode | docker login udodevprojectacr.azurecr.io -u "$(acrUsername)" --password-stdin
 
       # Build and tag the Docker image
       docker build -t udodevprojectacr.azurecr.io/my-eshop:$(Build.BuildId) .
@@ -24,21 +18,3 @@ jobs:
       # Push the Docker image to Azure Container Registry
       docker push udodevprojectacr.azurecr.io/my-eshop:$(Build.BuildId)
     displayName: 'Build and Push'
-
-- deployment: DeployToAKS
-  displayName: 'Deploy to AKS'
-  dependsOn: Build
-  pool:
-    vmImage: 'ubuntu-latest'
-  environment: 'udodevprojectaks'
-  strategy:
-    runOnce:
-      deploy:
-        steps:
-        - checkout: self
-        - task: UsePythonVersion@0
-          inputs:
-            versionSpec: '3.x'
-        - script: |
-            kubectl apply -f kubernetes-manifest.yml
-          displayName: 'Deploy to AKS'
